Archive2/c0/677eabc56b545b/output
main.cpp:15:15: warning: missing terminating " character [enabled by default]
     input.str("1
               ^
main.cpp:15:5: error: missing terminating " character
     input.str("1
     ^
main.cpp: In function 'int main()':
main.cpp:14:5: error: 'istrin' is not a member of 'std'
     std::istrin
     ^
main.cpp:15:5: error: expected ';' before 'input'
     input.str("1
     ^
main.cpp:17:41: error: 'input' was not declared in this scope
     for (std::string line; std::getline(input, line); ) {
                                         ^
main.cpp:18:9: error: 'sum' was not declared in this scope
         sum += std::stoi(line);
         ^
main.cpp:20:38: error: 'sum' was not declared in this scope
     std::cout << "\nThe sum is: " << sum << "\n";
                                      ^
